test: 잔액, 상품, 쿠폰 통합테스트